rooms and index changes

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -38,8 +38,10 @@ blocks:
         room-style:
             -
                 heading: STUDIO SUITE
-                img: /uploads/studio-suites.jpg
-                img_aspect: Landscape
+                images:
+                    -  /uploads/studio-suites.jpg
+                    -  /uploads/premium-one-bedroom-suites.jpg
+
                 rooms:
                     -
                         name: Ocean View King
@@ -53,6 +55,7 @@ blocks:
                             bathroom with a rain shower and teak bathtub. Enjoy
                             thoughtful moments with a complimentary refreshment
                             gallery.
+                        tour-pic: /uploads/studio-suites.jpg
                     -
                         name: Lagoon Access Twin
                         size: 120
@@ -72,6 +75,8 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
+                        
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: Studio Suite King
                         size: 120
@@ -91,10 +96,14 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
             -
                 heading: ONE BEDROOM SUITE
-                img: /uploads/one-bedroom-suites.jpg
-                img_aspect: Landscape
+                images:
+                    - /uploads/one-bedroom-suites.jpg
+                    - /uploads/one-bedroom-suites.jpg
+                    - /uploads/one-bedroom-suites.jpg
+
                 rooms:
                     -
                         name: One Bedroom Ocean View King
@@ -108,6 +117,7 @@ blocks:
                             A spacious living room opens onto a balcony, ideal
                             for soaking in the surroundings. With two nights or
                             more enjoy a 60-minute signature massage for two.
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: Lagoon Access King
                         size: 120
@@ -127,6 +137,7 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: One Bedroom King
                         size: 120
@@ -146,10 +157,14 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
             -
                 heading: TWO BEDROOM SUITE
-                img: /uploads/two-bedroom-suites.jpg
-                img_aspect: Landscape
+                images:
+                    - /uploads/two-bedroom-suites.jpg
+                    - /uploads/two-bedroom-suites.jpg
+                    - /uploads/two-bedroom-suites.jpg
+                
                 rooms:
                     -
                         name: Two Bedroom Lagoon Access
@@ -165,6 +180,7 @@ blocks:
                             lagoon. Indoor and outdoor living blend with
                             generous spaces, private terraces, and bathrooms
                             that reflect Bali’s artisanal heritage.
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: Two Bedroom Suite
                         size: 120
@@ -184,10 +200,14 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
             -
                 heading: PREMIUM ONE BEDROOM SUITE
-                img: /uploads/premium-one-bedroom-suites.jpg
-                img_aspect: Landscape
+                images:
+                    -  /uploads/premium-one-bedroom-suites.jpg
+                    -  /uploads/premium-one-bedroom-suites.jpg
+                    -  /uploads/premium-one-bedroom-suites.jpg
+
                 rooms:
                     -
                         name: Premium One Bedroom Ocean View
@@ -204,6 +224,7 @@ blocks:
                             light-filled interiors include a separate lounge,
                             king bed, and a bathroom that pays homage to
                             Balinese craft and detail.
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: Lagoon Access King
                         size: 0
@@ -213,6 +234,7 @@ blocks:
                             -
                             -
                         content: ''
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: Garden View King
                         size: 0
@@ -222,10 +244,14 @@ blocks:
                             -
                             -
                         content: ''
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
             -
-                heading: PRIVATE VILLAS
-                img: /uploads/private-villas.jpg
-                img_aspect: Landscape
+                heading: PRIVATE villas
+                images: 
+                    -  /uploads/premium-one-bedroom-suites.jpg
+                    -  /uploads/premium-one-bedroom-suites.jpg
+                    -  /uploads/premium-one-bedroom-suites.jpg
+
                 rooms:
                     -
                         name: Beachfront Private Pool Villa
@@ -242,6 +268,7 @@ blocks:
                             rain showers, and a beautiful teak bathtub. Step
                             into your outdoor living space, the rhythm of the
                             waves becomes a backdrop to your peaceful haven.
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: Garden Pool Villa
                         size: 0
@@ -250,10 +277,11 @@ blocks:
                         extra-feature:
                             - ''
                         content: ''
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
             -
                 heading: PENTHOUSE
-                img: /uploads/penthouse.jpg
-                img_aspect: Portrait
+                images:
+                    -  /uploads/penthouse.jpg
                 rooms:
                     -
                         name: Oceanfront Private Pool Penthouse
@@ -270,6 +298,7 @@ blocks:
                             peaceful retreat with a teak bathtub, rainfall
                             shower, and refined ensuite, while the terrace and
                             cabana set the stage for sunset views.
+                        tour-pic: /uploads/studio-ocean-view-king.jpg
         color-scheme: mint-400
         min-height: 50vh
     -
