Updated 2 files via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -54,8 +54,20 @@ blocks:
         min-height: 50vh
     -
         _id: banner-split-video
-        block-content-html: "<h3 class=\"sub-heading\">REGENT CLUB</h3><h2 class=\"heading-lg\">Above the Ocean, \LBeyond the Ordinary</h2><p>Explore an exclusive sanctuary on your terms, and look forward to generous additional privileges, featuring all-day buffet and a-la-carte gourmet offerings, premium alcoholic beverages, daily afternoon tea and evening cocktail inclusive of champagne. <br /><br />Participate in dedicated cultural activities, and indulge in our comfortable adult-only cabanas and infinity pool.</p>"
-        background-desktop-image: /uploads/desktop-banner.jpg
+        block-content-html: >-
+            <h3 class="sub-heading">FESTIVE</h3><h2 class="heading-lg">A season
+            to remember</h2><p>Canggu has become Bali’s most captivating coastal
+            address, where the allure of golden sunsets meets the sophistication
+            of a vibrant seaside lifestyle.</p><p>Celebrated for its world-class
+            surfing, the area draws an international community of connoisseurs
+            who gather by the shore to embrace the rhythm of the waves as the
+            horizon glows in amber and rose.</p><p>During the festive season,
+            Canggu transforms into a spirited yet refined enclave, alive with
+            exquisite dining, elegant celebrations, and the timeless charm of
+            beachfront living. Here, every moment is framed by the artistry of
+            nature and the energy of celebration—an extraordinary destination
+            where ocean, culture, and festivity converge in perfect harmony.</p>
+        background-desktop-image: /uploads/festive-regent.jpg
         background-mobile-image: /uploads/desktop-banner.jpg
         videos:
             -
