Updated 2 files via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ blocks:
                     text: Email
                     url: mailto:events@regentbalicanggu.com
                 -
-                    text: Offers 
+                    text: Offers
                     url: /offers
         overlay-color-scheme: mint-400
         content-max-width: 35rem
@@ -68,10 +68,10 @@ blocks:
             nature and the energy of celebration—an extraordinary destination
             where ocean, culture, and festivity converge in perfect harmony.</p>
         background-desktop-image: /uploads/festive-regent.jpg
-        background-mobile-image: /uploads/desktop-banner.jpg
+        background-mobile-image: /uploads/festive-regent.jpg
         videos:
             -
-                video_path: /uploads/test-50k-kbs-hb.mp4
+                video_path:
                 video_type: mp4
         background-alt:
         desktop-image-position: right
