rooms pop up has been added

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -20,7 +20,7 @@ blocks:
         min-height: 90vh
         color-scheme: dark
     -
-        _id: text-block
+        _id: text-block-top-overlap
         block-content-html: >-
             <h3 class="sub-heading">SUITES &amp; VILLAS</h3><h2
             class="heading-lg">A coastal haven where Bali's spirit
@@ -32,7 +32,10 @@ blocks:
         content-max-width: 700px
         text-alignment: center
         color-scheme: base
+        overlay-color-scheme: mint-400
         min-height: 50vh
+        bottom-text:
+            links:
     -
         _id: rooms
         room-style:
