--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@ blocks:
             exquisite dining, elegant celebrations, and the timeless charm of
             beachfront living. Here, every moment is framed by the artistry of
             nature and the energy of celebration—an extraordinary destination
-            where ocean, culture, and festivity converge in perfect harmony.</p>
+            where ocean, culture, and festivity converge in perfect
+            harmony.</p><p><a href="" target="_blank" rel="noopener">FESTIVE
+            BROCHURE</a></p>
         background-desktop-image: /uploads/festive-regent.jpg
         background-mobile-image: /uploads/festive-regent.jpg
         videos:
