Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@ blocks:
             beachfront living. Here, every moment is framed by the artistry of
             nature and the energy of celebration—an extraordinary destination
             where ocean, culture, and festivity converge in perfect
-            harmony.</p><p><a href="" target="_blank" rel="noopener">FESTIVE
-            BROCHURE</a></p>
+            harmony.</p><p><a
+            href="/uploads/regent-bali-canggu-festive-seasons-2025-2.pdf"
+            title="FESTIVE BROCHURE" target="_blank" rel="noopener"
+            class="button-featured">FESTIVE BROCHURE</a></p>
         background-desktop-image: /uploads/festive-regent.jpg
         background-mobile-image: /uploads/festive-regent.jpg
         videos:
