--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ blocks:
             beachfront living. Here, every moment is framed by the artistry of
             nature and the energy of celebration—an extraordinary destination
             where ocean, culture, and festivity converge in perfect
-            harmony.</p><p><a
+            harmony.</p><p></p><p><a
             href="/uploads/regent-bali-canggu-festive-seasons-2025-2.pdf"
             title="FESTIVE BROCHURE" target="_blank" rel="noopener"
             class="button-featured">FESTIVE BROCHURE</a></p>
