Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ blocks:
             nature and the energy of celebration—an extraordinary destination
             where ocean, culture, and festivity converge in perfect
             harmony.</p><p></p><p><a
-            href="/uploads/regent-bali-canggu-festive-seasons-2025-2.pdf"
+            href="https://digital.ihg.com/is/content/ihg/regent-bali-canggu-festive-seasons-2025?fmt=pdf"
             title="FESTIVE BROCHURE" target="_blank" rel="noopener"
             class="button-featured">FESTIVE BROCHURE</a></p>
         background-desktop-image: /uploads/festive-regent.jpg
