--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ blocks:
                     text: +62 361 201 9999
                     url: tel:623612019999
                 -
-                    text: Email
+                    text: Events@regentbalicanggu.com
                     url: mailto:events@regentbalicanggu.com
                 -
                     text: Offers
