Updated 4 files via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -42,9 +42,8 @@ blocks:
             -
                 heading: STUDIO SUITE
                 images:
-                    -  /uploads/studio-suites.jpg
-                    -  /uploads/premium-one-bedroom-suites.jpg
-
+                    - /uploads/studio-suites.jpg
+                    - /uploads/premium-one-bedroom-suites.jpg
                 rooms:
                     -
                         name: Ocean View King
@@ -58,7 +57,7 @@ blocks:
                             bathroom with a rain shower and teak bathtub. Enjoy
                             thoughtful moments with a complimentary refreshment
                             gallery.
-                        tour-pic: /uploads/studio-suites.jpg
+                        tour-pic: /uploads/regentbalicanggu-studiosuite.jpeg
                     -
                         name: Lagoon Access Twin
                         size: 120
@@ -78,7 +77,6 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
-                        
                         tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: Studio Suite King
@@ -106,7 +104,6 @@ blocks:
                     - /uploads/one-bedroom-suites.jpg
                     - /uploads/one-bedroom-suites.jpg
                     - /uploads/one-bedroom-suites.jpg
-
                 rooms:
                     -
                         name: One Bedroom Ocean View King
@@ -120,7 +117,7 @@ blocks:
                             A spacious living room opens onto a balcony, ideal
                             for soaking in the surroundings. With two nights or
                             more enjoy a 60-minute signature massage for two.
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic: /uploads/floorplan-1br.jpeg
                     -
                         name: Lagoon Access King
                         size: 120
@@ -167,7 +164,6 @@ blocks:
                     - /uploads/two-bedroom-suites.jpg
                     - /uploads/two-bedroom-suites.jpg
                     - /uploads/two-bedroom-suites.jpg
-                
                 rooms:
                     -
                         name: Two Bedroom Lagoon Access
@@ -207,10 +203,9 @@ blocks:
             -
                 heading: PREMIUM ONE BEDROOM SUITE
                 images:
-                    -  /uploads/premium-one-bedroom-suites.jpg
-                    -  /uploads/premium-one-bedroom-suites.jpg
-                    -  /uploads/premium-one-bedroom-suites.jpg
-
+                    - /uploads/premium-one-bedroom-suites.jpg
+                    - /uploads/premium-one-bedroom-suites.jpg
+                    - /uploads/premium-one-bedroom-suites.jpg
                 rooms:
                     -
                         name: Premium One Bedroom Ocean View
@@ -250,11 +245,10 @@ blocks:
                         tour-pic: /uploads/studio-ocean-view-king.jpg
             -
                 heading: PRIVATE villas
-                images: 
-                    -  /uploads/premium-one-bedroom-suites.jpg
-                    -  /uploads/premium-one-bedroom-suites.jpg
-                    -  /uploads/premium-one-bedroom-suites.jpg
-
+                images:
+                    - /uploads/premium-one-bedroom-suites.jpg
+                    - /uploads/premium-one-bedroom-suites.jpg
+                    - /uploads/premium-one-bedroom-suites.jpg
                 rooms:
                     -
                         name: Beachfront Private Pool Villa
@@ -284,12 +278,12 @@ blocks:
             -
                 heading: PENTHOUSE
                 images:
-                    -  /uploads/penthouse.jpg
+                    - /uploads/penthouse.jpg
                 rooms:
                     -
                         name: Oceanfront Private Pool Penthouse
                         size: 618
-                        bed-size: 'KING BED & TWIN BEDS'
+                        bed-size: KING BED & TWIN BEDS
                         sleeps: 6
                         extra-feature:
                             -
