--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@ blocks:
     -
         _id: banner-split-video
         block-content-html: "<h3 class=\"sub-heading\">REGENT CLUB</h3><h2 class=\"heading-lg\">Above the Ocean, \LBeyond the Ordinary</h2><p>Explore an exclusive sanctuary on your terms, and look forward to generous additional privileges, featuring all-day buffet and a-la-carte gourmet offerings, premium alcoholic beverages, daily afternoon tea and evening cocktail inclusive of champagne. <br /><br />Participate in dedicated cultural activities, and indulge in our comfortable adult-only cabanas and infinity pool.</p>"
-        background-desktop-image: /uploads/festive-regent.jpg
-        background-mobile-image: /uploads/festive-regent.jpg
+        background-desktop-image: /uploads/desktop-banner-1.jpg
+        background-mobile-image: /uploads/desktop-banner-1.jpg
         videos:
             -
-                video_path:
+                video_path: /uploads/videos/wedding-cover.jpg
                 video_type: mp4
         background-alt:
         desktop-image-position: right
