--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -58,7 +58,7 @@ blocks:
                             bathroom with a rain shower and teak bathtub. Enjoy
                             thoughtful moments with a complimentary refreshment
                             gallery.
-                        tour-pic: /uploads/studio-suites.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
                     -
                         name: Lagoon Access Twin
                         size: 120
@@ -79,7 +79,7 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
                         
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
                     -
                         name: Studio Suite King
                         size: 120
@@ -99,7 +99,7 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
             -
                 heading: ONE BEDROOM SUITE
                 images:
@@ -120,7 +120,7 @@ blocks:
                             A spacious living room opens onto a balcony, ideal
                             for soaking in the surroundings. With two nights or
                             more enjoy a 60-minute signature massage for two.
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
                     -
                         name: Lagoon Access King
                         size: 120
@@ -140,7 +140,7 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
                     -
                         name: One Bedroom King
                         size: 120
@@ -160,7 +160,7 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
             -
                 heading: TWO BEDROOM SUITE
                 images:
@@ -183,7 +183,7 @@ blocks:
                             lagoon. Indoor and outdoor living blend with
                             generous spaces, private terraces, and bathrooms
                             that reflect Bali’s artisanal heritage.
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
                     -
                         name: Two Bedroom Suite
                         size: 120
@@ -203,7 +203,7 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
             -
                 heading: PREMIUM ONE BEDROOM SUITE
                 images:
@@ -227,7 +227,7 @@ blocks:
                             light-filled interiors include a separate lounge,
                             king bed, and a bathroom that pays homage to
                             Balinese craft and detail.
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
                     -
                         name: Lagoon Access King
                         size: 0
@@ -237,7 +237,7 @@ blocks:
                             -
                             -
                         content: ''
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
                     -
                         name: Garden View King
                         size: 0
@@ -247,7 +247,7 @@ blocks:
                             -
                             -
                         content: ''
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
             -
                 heading: PRIVATE villas
                 images: 
@@ -271,7 +271,7 @@ blocks:
                             rain showers, and a beautiful teak bathtub. Step
                             into your outdoor living space, the rhythm of the
                             waves becomes a backdrop to your peaceful haven.
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
                     -
                         name: Garden Pool Villa
                         size: 0
@@ -280,7 +280,7 @@ blocks:
                         extra-feature:
                             - ''
                         content: ''
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
             -
                 heading: PENTHOUSE
                 images:
@@ -301,7 +301,7 @@ blocks:
                             peaceful retreat with a teak bathtub, rainfall
                             shower, and refined ensuite, while the terrace and
                             cabana set the stage for sunset views.
-                        tour-pic: /uploads/studio-ocean-view-king.jpg
+                        tour-pic:  /uploads/tour-placeholder.avif
         color-scheme: mint-400
         min-height: 50vh
     -
