Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ blocks:
     -
         _id: banner-split-video
         block-content-html: "<h3 class=\"sub-heading\">REGENT CLUB</h3><h2 class=\"heading-lg\">Above the Ocean, \LBeyond the Ordinary</h2><p>Explore an exclusive sanctuary on your terms, and look forward to generous additional privileges, featuring all-day buffet and a-la-carte gourmet offerings, premium alcoholic beverages, daily afternoon tea and evening cocktail inclusive of champagne. <br /><br />Participate in dedicated cultural activities, and indulge in our comfortable adult-only cabanas and infinity pool.</p>"
-        background-desktop-image:
+        background-desktop-image: /uploads/desktop-banner-1.jpg
         background-mobile-image: /uploads/desktop-banner-1.jpg
         videos:
             -
@@ -128,6 +128,18 @@ blocks:
         heading: The Highlights
         highlights:
             -
+                nav-heading: Festive Season
+                heading: Festive Celebrations
+                image: /uploads/festive-season-highlight-image.avif
+                imag-alt:
+                text: >-
+                    This festive season, indulge in extraordinary
+                    moments—flavours that linger, music that stirs the soul, and
+                    gatherings that become cherished memories. A celebration
+                    timeless, meaningful, and entirely your own.
+                button-text:
+                link:
+            -
                 nav-heading: Penthouse
                 heading: Above the Ocean, Beyond the Ordinary
                 image: /uploads/regent-bali-ph.avif
@@ -140,18 +152,6 @@ blocks:
                     Balinese massage, an experience of quiet indulgence, where
                     every detail evokes refinement, privacy, and serene coastal
                     living.
-                button-text:
-                link:
-            -
-                nav-heading: Festive Season
-                heading: Festive Celebrations
-                image: /uploads/festive-season-highlight-image.avif
-                imag-alt:
-                text: >-
-                    This festive season, indulge in extraordinary
-                    moments—flavours that linger, music that stirs the soul, and
-                    gatherings that become cherished memories. A celebration
-                    timeless, meaningful, and entirely your own.
                 button-text:
                 link:
             -
