Updated 10 files via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -97,7 +97,7 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
-                        tour-pic:  /uploads/tour-placeholder.avif
+                        tour-pic: /uploads/tour-placeholder.avif
             -
                 heading: ONE BEDROOM SUITE
                 images:
@@ -137,7 +137,8 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
-                        tour-pic:  /uploads/tour-placeholder.avif
+                        tour-pic: >-
+                            /uploads/regentbalicanggu-onebedroomsuite-lagoonaccess.jpeg
                     -
                         name: One Bedroom King
                         size: 120
@@ -157,7 +158,7 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
-                        tour-pic:  /uploads/tour-placeholder.avif
+                        tour-pic: /uploads/tour-placeholder.avif
             -
                 heading: TWO BEDROOM SUITE
                 images:
@@ -179,7 +180,7 @@ blocks:
                             lagoon. Indoor and outdoor living blend with
                             generous spaces, private terraces, and bathrooms
                             that reflect Bali’s artisanal heritage.
-                        tour-pic:  /uploads/tour-placeholder.avif
+                        tour-pic: /uploads/floorplan-2br.jpeg
                     -
                         name: Two Bedroom Suite
                         size: 120
@@ -199,7 +200,7 @@ blocks:
                             offers serene comfort, while unlimited laundry,
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
-                        tour-pic:  /uploads/tour-placeholder.avif
+                        tour-pic: /uploads/floorplan-2br-1.jpeg
             -
                 heading: PREMIUM ONE BEDROOM SUITE
                 images:
@@ -222,7 +223,7 @@ blocks:
                             light-filled interiors include a separate lounge,
                             king bed, and a bathroom that pays homage to
                             Balinese craft and detail.
-                        tour-pic:  /uploads/tour-placeholder.avif
+                        tour-pic: /uploads/premium-floorplan-dpscr.jpeg
                     -
                         name: Lagoon Access King
                         size: 0
@@ -232,7 +233,7 @@ blocks:
                             -
                             -
                         content: ''
-                        tour-pic:  /uploads/tour-placeholder.avif
+                        tour-pic: /uploads/tour-placeholder.avif
                     -
                         name: Garden View King
                         size: 0
@@ -242,7 +243,7 @@ blocks:
                             -
                             -
                         content: ''
-                        tour-pic:  /uploads/tour-placeholder.avif
+                        tour-pic: /uploads/tour-placeholder.avif
             -
                 heading: PRIVATE villas
                 images:
@@ -265,7 +266,7 @@ blocks:
                             rain showers, and a beautiful teak bathtub. Step
                             into your outdoor living space, the rhythm of the
                             waves becomes a backdrop to your peaceful haven.
-                        tour-pic:  /uploads/tour-placeholder.avif
+                        tour-pic: /uploads/beachvilla-floorplan.jpeg
                     -
                         name: Garden Pool Villa
                         size: 0
@@ -274,7 +275,7 @@ blocks:
                         extra-feature:
                             - ''
                         content: ''
-                        tour-pic:  /uploads/tour-placeholder.avif
+                        tour-pic: /uploads/regentbalicanggu-gardenvilla-1.jpeg
             -
                 heading: PENTHOUSE
                 images:
@@ -295,7 +296,7 @@ blocks:
                             peaceful retreat with a teak bathtub, rainfall
                             shower, and refined ensuite, while the terrace and
                             cabana set the stage for sunset views.
-                        tour-pic:  /uploads/tour-placeholder.avif
+                        tour-pic: /uploads/penthouse-floorplan.jpeg
         color-scheme: mint-400
         min-height: 50vh
     -
