Updated 11 files via CloudCannon.

--- a/dining.html
+++ b/dining.html
@@ -42,8 +42,9 @@ blocks:
             buttons:
                 -
                     text: Discover more
-                    url:
-                    button-color: mint-400
+                    url: >-
+                        https://www.ihg.com/regent/hotels/us/en/bali/dpscr/hoteldetail/dining/taru
+                    button-color: '#000000'
         carousel:
             desktop-image-position: right
             dots: true
@@ -70,12 +71,14 @@ blocks:
             buttons:
                 -
                     text: Discover more
-                    url:
-                    button-color: mint-400
+                    url: >-
+                        https://www.ihg.com/regent/hotels/us/en/bali/dpscr/hoteldetail/dining/beach-house
+                    button-color: '#000000'
                 -
                     text: Reserve a Table
-                    url:
-                    button-color: dark
+                    url: >-
+                        https://www.tablecheck.com/en/regent-bali-canggu-beach-house/reserve/message?utm_source=website
+                    button-color: '#000000'
         carousel:
             desktop-image-position: left
             dots: true
@@ -103,12 +106,13 @@ blocks:
             buttons:
                 -
                     text: Discover more
-                    url:
-                    button-color: mint-400
+                    url: https://sazonbali.com
+                    button-color: '#000000'
                 -
                     text: Reserve a Table
-                    url:
-                    button-color: dark
+                    url: >-
+                        https://www.tablecheck.com/en/regent-bali-canggu-sazon/reserve/message?utm_source=instagram
+                    button-color: '#000000'
         carousel:
             desktop-image-position: right
             dots: true
@@ -136,7 +140,7 @@ blocks:
                 -
                     text: Discover more
                     url:
-                    button-color: mint-400
+                    button-color: '#000000'
                 -
                     text: Reserve a Table
                     url:
