--- a/offers.html
+++ b/offers.html
@@ -26,82 +26,8 @@ blocks:
         description: >-
             Enhance your  luxurious stay with exclusive offers and complimentary
             inclusions.
-        events:
-            -
-                heading: "A Club Like \LNo Other"
-                sub-heading: FEATURED OFFER
-                full-description: >-
-                    Regent Club elevates above the noise, offering more than
-                    just a  collection of uplifting experiences—it’s an
-                    exclusive retreat for the  distinguished. 
-
-
-                    Discover Regent Club your way, featuring all-day gourmet 
-                    offerings, premium alcoholic beverages, complimentary
-                    champagne, and  more.
-
-
-                    As the doors open you are in awe — in front an infinity
-                    pool, further away the ocean and blue skies greet you. The
-                    Regent Club team echoes  your name as you enter and escorts
-                    you to your preferred seating,  whether that may be indoors
-                    or outdoors. It’s up to you what you do  next, as everything
-                    is on your terms.
-                short-description:
-                featured-image: /uploads/offers2.jpg
-                button-link:
-                button-text: DISCOVER MORE
-            -
-                heading: Elegance at Year’s End
-                sub-heading:
-                full-description: >-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod  tempor
-                    incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
-                short-description: >-
-                    Celebrate the year’s end with exquisite dining and serene
-                    moments, embracing the art of graceful celebration.
-                featured-image: /uploads/elegancy-at-year-s-end.jpg
-                button-link:
-                button-text: discover more
-            -
-                heading: "Advance\_Saver"
-                sub-heading:
-                full-description:
-                short-description: >-
-                    Plan your stay early and save — a reward for booking in
-                    advance.
-                featured-image: /uploads/offers4.jpg
-                button-link:
-                button-text: discover more
-            -
-                heading: Stay Longer and Save
-                sub-heading:
-                full-description:
-                short-description: >-
-                    Extend your adventure and save more. It’s the perfect chance
-                    to settle in and explore everything in Canggu and far
-                    beyond.
-                featured-image: /uploads/offers5.jpg
-                button-link:
-                button-text: discover more
-            -
-                heading: "Advance\_Saver"
-                sub-heading:
-                full-description:
-                short-description: >-
-                    Receive a complimentary upgrade to a  Lagoon Pool Suite,
-                    inclusive of a floating breakfast experience. Unwind 
-                    further with a 60-minute Balinese massage for two, and an
-                    afternoon tea  offering an assortment of delights and fine
-                    selection of teas.
-                featured-image: /uploads/two-bedroom-suites.jpg
-                button-link:
-                button-text: discover more
+        button:
+            color-scheme: mint-400 
         color-scheme: mint-300
 seo:
     title: Regent Website Proposal | Kelapa Creative
