--- a/dining-beach-house.html
+++ b/dining-beach-house.html
@@ -42,11 +42,11 @@ blocks:
                 -
                     text: BOOK A TABLE
                     url:
-                    button-color: mint-400
+                    color-scheme: mint-400
                 -
                     text: menu
                     url:
-                    button-color: mint-400
+                    color-scheme: mint-400
         carousel:
             desktop-image-position: right
             dots: true
