--- a/dining.html
+++ b/dining.html
@@ -44,7 +44,7 @@ blocks:
                     text: Discover more
                     url: >-
                         https://www.ihg.com/regent/hotels/us/en/bali/dpscr/hoteldetail/dining/taru
-                    color-scheme: 'mint-500'
+                    color-scheme: mint-500
         carousel:
             desktop-image-position: right
             dots: true
@@ -73,12 +73,12 @@ blocks:
                     text: Discover more
                     url: >-
                         https://www.ihg.com/regent/hotels/us/en/bali/dpscr/hoteldetail/dining/beach-house
-                    color-scheme: 'mint-500'
+                    color-scheme: mint-500
                 -
                     text: Reserve a Table
                     url: >-
                         https://www.tablecheck.com/en/regent-bali-canggu-beach-house/reserve/message?utm_source=website
-                    color-scheme: 'mint-500'
+                    color-scheme: mint-500
         carousel:
             desktop-image-position: left
             dots: true
@@ -95,7 +95,7 @@ blocks:
     -
         _id: split-banner-slider
         content:
-            subHeading: SAZON
+            subHeading: Sazón
             heading:
             p-text: >-
                 <p>Led by award-winning Chef Andrew Walsh, experience the
@@ -107,12 +107,12 @@ blocks:
                 -
                     text: Discover more
                     url: https://sazonbali.com
-                    color-scheme: 'mint-500'
+                    color-scheme: mint-500
                 -
                     text: Reserve a Table
                     url: >-
                         https://www.tablecheck.com/en/regent-bali-canggu-sazon/reserve/message?utm_source=instagram
-                    color-scheme: 'mint-500'
+                    color-scheme: mint-500
         carousel:
             desktop-image-position: right
             dots: true
@@ -140,7 +140,7 @@ blocks:
                 -
                     text: Discover more
                     url:
-                    color-scheme: 'mint-500'
+                    color-scheme: mint-500
                 -
                     text: Reserve a Table
                     url:
