--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -394,11 +394,7 @@ blocks:
     -
         _id: wave-grid
         block-content-html: >-
-            <h2 class="heading-lg">Offers &amp; Promotions</h2><p>Lorem ipsum
-            dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.</p>
+            <h2 class="heading-lg">Offers &amp; Promotions</h2><p> Unwind in the idyllic setting of Regent Bali Canggu. Enhance your luxurious stay with exclusive offers and complimentary inclusions.</p>
         grid:
             -
                 heading: Stay Longer & Save
@@ -423,7 +419,7 @@ blocks:
                     url: '#'
                     text: reserve
             -
-                heading: Elegance ay Year’s End
+                heading: Elegance at Year’s End
                 description: >-
                     Celebrate the year’s end with exquisite dining and serene
                     moments, embracing the art of graceful celebration.
