Updated 1 file via CloudCannon.

--- a/dining.html
+++ b/dining.html
@@ -99,10 +99,10 @@ blocks:
             heading:
             p-text: >-
                 <p>Led by award-winning Chef Andrew Walsh, experience the
-                neighborhood Spanish hideaway on Batu Bolong, where vibrant
-                atmosphere meets authentic flavours.<br /><br /><br />Mon -
-                Thurs Open 08.00 am - 09.00 pm<br />Fri - Sat Open Noon - 04.00
-                am</p>
+                neighborhood Mediterranean hideaway on Batu Bolong, where
+                vibrant atmosphere meets authentic flavours.<br /><br /><br
+                />Mon - Thurs Open 08.00 am - 09.00 pm<br />Friday - Sunday Open
+                Noon - 12.00 pm</p>
             buttons:
                 -
                     text: Discover more
