--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ blocks:
         min-height: 50vh
     -
         _id: banner-split-video
-        block-content-html: "<h3 class=\"sub-heading\">REGENT CLUB</h3><h2 class=\"heading-lg\">Above the Ocean, \LBeyond the Ordinary</h2><p>Explore an exclusive sanctuary on your terms, and look forward to generous additional privileges, featuring all-day buffet and a-la-carte gourmet offerings, premium alcoholic beverages, daily afternoon tea and evening cocktail inclusive of champagne. <br /><br />Participate in dedicated cultural activities, and indulge in our comfortable adult-only cabanas and infinity pool.</p>"
+        block-content-html: "<h2 class=\"heading-lg\">REGENT CLUB</h2><h3 class=\"sub-heading\"></h3>Above the Ocean, Beyond the Ordinary</h3><p>A sanctuary reserved for those who seek time, space, and effortless privilege. At the Regent Club, days unfold with quiet abundance. Guests enjoy refined all-day culinary offerings and a carefully curated selection of premium wines and spirits, accompanied by afternoon tea rituals and evening cocktails served with champagne.</p><p>You are invited to join intimate cultural experiences, relax within serene adults-only cabanas, and unwind by the private infinity pool, a peaceful setting designed for moments of stillness and unhurried comfort.</p>"
         background-desktop-image: /uploads/desktop-banner-1.jpg
         background-mobile-image: /uploads/desktop-banner-1.jpg
         videos:
