--- a/dining.html
+++ b/dining.html
@@ -101,8 +101,8 @@ blocks:
                 <p>Led by award-winning Chef Andrew Walsh, experience the
                 neighborhood Mediterranean hideaway on Batu Bolong, where
                 vibrant atmosphere meets authentic flavours.<br /><br /><br
-                />Mon - Thurs Open 08.00 am - 09.00 pm<br />Friday - Sunday Open
-                Noon - 12.00 pm</p>
+                />Mon - Thurs Open 08.00 am - 09.00 pm<br />Fri - Sun Open Noon
+                - 12.00 pm</p>
             buttons:
                 -
                     text: Discover more
